Section 4: Basic Hands On with GraphQL & Java Spring

--- a/lectures/udemy-code-graphql/ch04/src/main/resources/application.yml
+++ b/lectures/udemy-code-graphql/ch04/src/main/resources/application.yml
@@ -1,6 +1,10 @@
+logging:
+  pattern:
+    console: "%clr(%d{HH:mm:ss.SSS}){faint} %clr(${LOG_LEVEL_PATTERN:%5p}) %clr(---){faint} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %m%n${LOG_EXCEPTION_CONVERSION_WORD:%wEx}"
+
 spring:
   main:
-    banner-mode: off
+    banner-mode: OFF
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=problemz
     username: postgres
@@ -9,3 +13,4 @@ spring:
     hibernate:
       ddl-auto: none
     show-sql: false
+
